2008-12-03  Hans Breuer  <hans@breuer.org>

	* app/menus.c : map help to "F1", patch Matt Keenan, bug #563110

	* app//diapagelayout.c : one gtk_adjustment_new call was not adjusted.
	Patch from Matt Keenan fixing bug #563106.

2008-11-30  Steffen Macke <sdteffen@sdteffen.de>

	* makefile.msc: Create *.mo files in build/win32
	* installer/win32/dia.nsi: Reflect documentation updates

2008-11-22  Hans Breuer  <hans@breuer.org>

	* objects/Database/table.c objects/UML/class.c : less warnings, patch by
	Sameer Sahasrabuddhe

2008-11-21  Hans Breuer  <hans@breuer.org>

	* objects/custom_lines/custom_linetypes.c objects/Database/compound.c
	  objects/Database/reference.c objects/Database/table.c
	  objects/UML/actor.c objects/UML/class.c objects/UML/large_package.c
	  objects/UML/note.c objects/UML/object.c objects/UML/small_package.c
	  objects/UML/usecase.c : consitent use PROP_STDNAME_LINE_WIDTH instead
	of "line_width", patch from Sameer Sahasrabuddhe

2008-11-18  Steffen Macke <sdteffen@sdteffen.de>

	* doc/en/dia.xml:
	* doc/eu/dia.xml:
	* doc/fr/dia.xml:
	* doc/pl/dia.xml: Consistently use DocBook 4.5 DTD from oasis-open.org
	
2008-11-16  Hans Breuer  <hans@breuer.org>

	* plug-ins/gprint/* : back to the attic
	* plug-ins/Makefile.am po/POTFILES.in configure.in : adjusted

	* plug-ins/cairo/diacairo.c : register "Edit/Copy Diagram" to copy
	the whole diagram into the clipboard (currently win32 only)

	* app/dia-props.c app/diapagelayout.c app/preferences.c
	  lib/dialogs.c lib/prop_geomtypes.c lib/prop_inttypes.c lib/widgets.c
	  objects/Database/table_dialog.c objects/SISSI/sissi_dialog.c
	  objects/UML/class_dialog.c : stop newer gtk+ complaining about 
	non-zero page size for spin buttons

2008-11-15  Steffen Macke <sdteffen@sdteffen.de>

	* makefile.msc:
	* installer/win32/dia.nsi:
	* installer/win32/wikifaq2installerfaq.sed: Small script to generate the
	installer FAQ file from the Wiki
	
2008-11-02  Hans Breuer  <hans@breuer.org>
