@@ -21,7 +21,8 @@
 #include "object.h"
 #include "diagram.h"
 
-void properties_show(Diagram *dia, DiaObject *obj);
+void object_properties_show(Diagram *dia, DiaObject *obj);
+void object_list_properties_show(Diagram *dia, GList *objects);
 void properties_update_if_shown(Diagram *dia, DiaObject *obj);
 void properties_hide_if_shown(Diagram *dia, DiaObject *obj);
 
